store-spotify-track: send spotify info to tag manager